Added header, sidebar and user info

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
-ANTES
-<teste></teste>
-DEPOIS
+<div id="main-wrapper">
+  <teste2></teste2>
+</div>
