Adicionado subheader, footer e corrigido alguns problemas de layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,37 @@
 <div id="main-wrapper">
-  <teste2></teste2>
+
+  <!-- HEADER -->
+  <ui-header></ui-header>
+
+  <!-- LEFT MENU -->
+  <aside id="leftsidebar" class="sidebar">
+    <ui-userinfo></ui-userinfo>
+
+    <ui-menu></ui-menu>
+
+    <ui-lm-footer></ui-lm-footer>
+  </aside>
+
+  <!-- MAIN CONTENT -->
+  <div class="page-wrapper">
+
+    <div class="container-fluid">
+
+      <!-- BREAD CRUMB -->
+      <ui-subheader></ui-subheader>
+
+      <!-- MAIN CONTENT -->
+      <div class="row">
+        <main>
+          <dashboard></dashboard>
+        </main>
+      </div>
+
+    </div>
+
+    <!-- FOOTER -->
+    <ui-footer></ui-footer>
+
+  </div>
+
 </div>
