Corrigido o layout dos cards

--- a/src/app/components/layout/subheader/subheader.component.css
+++ b/src/app/components/layout/subheader/subheader.component.css
@@ -1,6 +1,6 @@
 .page-titles {
   background: #ffffff;
-  margin: 0 -30px 15px;
+  margin: 0px -15px 15px -15px;
   padding: 15px;
   -webkit-box-shadow: 1px 0 5px rgba(0, 0, 0, 0.1);
   box-shadow: 1px 0 5px rgba(0, 0, 0, 0.1);
