--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,26 +1,45 @@
+.content-row {
+  padding: 15px;
+}
+
 .card {
-  border-color: #d7dfe3;
-  border-radius: 4px;
-  -webkit-box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.05);
-  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.05);
+  background: #fff;
+  min-height: 50px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  position: relative;
   margin-bottom: 30px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  border-radius: 2px;
 }
 
-@media (min-width: 768px) {
-  .flex-wrap {
-    -ms-flex-wrap: nowrap !important;
-    flex-wrap: nowrap !important;
-    -webkit-flex-wrap: nowrap !important;
-  }
+.card .body {
+  font-size: 14px;
+  color: #555;
+  padding: 20px;
 }
 
-h3 {
-  line-height: 30px;
-  font-size: 21px;
+.card .bg-red, .card .bg-pink, .card .bg-purple, .card .bg-deep-purple, .card .bg-indigo, .card .bg-blue, .card .bg-light-blue, .card .bg-cyan, .card .bg-teal, .card .bg-green, .card .bg-light-green, .card .bg-lime, .card .bg-yellow, .card .bg-amber, .card .bg-orange, .card .bg-deep-orange, .card .bg-brown, .card .bg-grey, .card .bg-blue-grey, .card .bg-black {
+  border-bottom: none !important;
+  color: #fff !important;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  color: #455a64;
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
+.bg-teal {
+  background-color: #00968B !important;
+  color: #fff;
+}
+
+.m-b--35 {
+  margin-bottom: -35px;
+}
+
+.font-bold {
+  font-weight: bold;
+}
+
+.dashboard-stat-list {
+  list-style: none;
+  padding-left: 0;
+  margin-top: 40px;
 }
