--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,30 +1,57 @@
-<div class="row">
+<div class="row clearfix content-row">
 
-  <div class="card col-lg-4">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-body">
-      <h4 class="card-title">Card title</h4>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
+  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+      <div class="card">
+          <div class="body bg-teal">
+              <div class="font-bold m-b--35">ANSWERED TICKETS</div>
+              <ul class="dashboard-stat-list">
+                  <li>
+                      TODAY
+                      <span class="pull-right"><b>12</b> <small>TICKETS</small></span>
+                  </li>
+                  <li>
+                      YESTERDAY
+                      <span class="pull-right"><b>15</b> <small>TICKETS</small></span>
+                  </li>
+              </ul>
+          </div>
+      </div>
   </div>
 
-  <div class="card col-lg-4">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-body">
-      <h4 class="card-title">Card title</h4>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
+  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+      <div class="card">
+          <div class="body bg-teal">
+              <div class="font-bold m-b--35">ANSWERED TICKETS</div>
+              <ul class="dashboard-stat-list">
+                  <li>
+                      TODAY
+                      <span class="pull-right"><b>12</b> <small>TICKETS</small></span>
+                  </li>
+                  <li>
+                      YESTERDAY
+                      <span class="pull-right"><b>15</b> <small>TICKETS</small></span>
+                  </li>
+              </ul>
+          </div>
+      </div>
   </div>
 
-  <div class="card col-lg-4">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-body">
-      <h4 class="card-title">Card title</h4>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
+  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+      <div class="card">
+          <div class="body bg-teal">
+              <div class="font-bold m-b--35">ANSWERED TICKETS</div>
+              <ul class="dashboard-stat-list">
+                  <li>
+                      TODAY
+                      <span class="pull-right"><b>12</b> <small>TICKETS</small></span>
+                  </li>
+                  <li>
+                      YESTERDAY
+                      <span class="pull-right"><b>15</b> <small>TICKETS</small></span>
+                  </li>
+              </ul>
+          </div>
+      </div>
   </div>
 
 </div>
