Novos cards de diversos tamanhos

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,57 +1,235 @@
 <div class="row clearfix content-row">
 
-  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-      <div class="card">
-          <div class="body bg-teal">
-              <div class="font-bold m-b--35">ANSWERED TICKETS</div>
-              <ul class="dashboard-stat-list">
-                  <li>
-                      TODAY
-                      <span class="pull-right"><b>12</b> <small>TICKETS</small></span>
-                  </li>
-                  <li>
-                      YESTERDAY
-                      <span class="pull-right"><b>15</b> <small>TICKETS</small></span>
-                  </li>
-              </ul>
-          </div>
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <div class="card">
+      <div class="body bg-teal">
+        <div class="font-bold m-b--35">ANSWERED TICKETS</div>
+        <ul class="dashboard-stat-list">
+          <li>
+            TODAY
+            <span class="pull-right"><b>12</b> <small>TICKETS</small></span>
+          </li>
+          <li>
+            WHAT THE FUCK!?!?
+            <span class="pull-right"><b>15</b> <small>TICKETS</small></span>
+          </li>
+        </ul>
       </div>
-  </div>
-
-  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-      <div class="card">
-          <div class="body bg-teal">
-              <div class="font-bold m-b--35">ANSWERED TICKETS</div>
-              <ul class="dashboard-stat-list">
-                  <li>
-                      TODAY
-                      <span class="pull-right"><b>12</b> <small>TICKETS</small></span>
-                  </li>
-                  <li>
-                      YESTERDAY
-                      <span class="pull-right"><b>15</b> <small>TICKETS</small></span>
-                  </li>
-              </ul>
-          </div>
-      </div>
-  </div>
-
-  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-      <div class="card">
-          <div class="body bg-teal">
-              <div class="font-bold m-b--35">ANSWERED TICKETS</div>
-              <ul class="dashboard-stat-list">
-                  <li>
-                      TODAY
-                      <span class="pull-right"><b>12</b> <small>TICKETS</small></span>
-                  </li>
-                  <li>
-                      YESTERDAY
-                      <span class="pull-right"><b>15</b> <small>TICKETS</small></span>
-                  </li>
-              </ul>
-          </div>
-      </div>
+    </div>
   </div>
 
 </div>
+
+<div class="row clearfix content-row">
+
+  <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+    <div class="card">
+      <div class="body bg-teal">
+        <div class="font-bold m-b--35">ANSWERED TICKETS</div>
+        <ul class="dashboard-stat-list">
+          <li>
+            TODAY
+            <span class="pull-right"><b>12</b> <small>TICKETS</small></span>
+          </li>
+          <li>
+            WHAT THE FUCK!?!?
+            <span class="pull-right"><b>15</b> <small>TICKETS</small></span>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+    <div class="card">
+      <div class="body bg-teal">
+        <div class="font-bold m-b--35">ANSWERED TICKETS</div>
+        <ul class="dashboard-stat-list">
+          <li>
+            TODAY
+            <span class="pull-right"><b>12</b> <small>TICKETS</small></span>
+          </li>
+          <li>
+            WHAT THE FUCK!?!?
+            <span class="pull-right"><b>15</b> <small>TICKETS</small></span>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<div class="row clearfix content-row">
+
+  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+    <div class="card">
+      <div class="body bg-teal">
+        <div class="font-bold m-b--35">ANSWERED TICKETS</div>
+        <ul class="dashboard-stat-list">
+          <li>
+            TODAY
+            <span class="pull-right"><b>12</b> <small>TICKETS</small></span>
+          </li>
+          <li>
+            WHAT THE FUCK!?!?
+            <span class="pull-right"><b>15</b> <small>TICKETS</small></span>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+    <div class="card">
+      <div class="body bg-teal">
+        <div class="font-bold m-b--35">ANSWERED TICKETS</div>
+        <ul class="dashboard-stat-list">
+          <li>
+            TODAY
+            <span class="pull-right"><b>12</b> <small>TICKETS</small></span>
+          </li>
+          <li>
+            WHAT THE FUCK!?!?
+            <span class="pull-right"><b>15</b> <small>TICKETS</small></span>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<div class="row clearfix content-row">
+
+  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+    <div class="card">
+      <div class="body bg-teal">
+        <div class="font-bold m-b--35">ANSWERED TICKETS</div>
+        <ul class="dashboard-stat-list">
+          <li>
+            TODAY
+            <span class="pull-right"><b>12</b> <small>TICKETS</small></span>
+          </li>
+          <li>
+            YESTERDAY
+            <span class="pull-right"><b>15</b> <small>TICKETS</small></span>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+    <div class="card">
+      <div class="body bg-teal">
+        <div class="font-bold m-b--35">ANSWERED TICKETS</div>
+        <ul class="dashboard-stat-list">
+          <li>
+            TODAY
+            <span class="pull-right"><b>12</b> <small>TICKETS</small></span>
+          </li>
+          <li>
+            YESTERDAY
+            <span class="pull-right"><b>15</b> <small>TICKETS</small></span>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+    <div class="card">
+      <div class="body bg-teal">
+        <div class="font-bold m-b--35">ANSWERED TICKETS</div>
+        <ul class="dashboard-stat-list">
+          <li>
+            TODAY
+            <span class="pull-right"><b>12</b> <small>TICKETS</small></span>
+          </li>
+          <li>
+            YESTERDAY
+            <span class="pull-right"><b>15</b> <small>TICKETS</small></span>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<div class="row clearfix content-row">
+
+    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+      <div class="card">
+        <div class="body bg-teal">
+          <div class="font-bold m-b--35">ANSWERED TICKETS</div>
+          <ul class="dashboard-stat-list">
+            <li>
+              TODAY
+              <span class="pull-right"><b>12</b> <small>TICKETS</small></span>
+            </li>
+            <li>
+              YESTERDAY
+              <span class="pull-right"><b>15</b> <small>TICKETS</small></span>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+      <div class="card">
+        <div class="body bg-teal">
+          <div class="font-bold m-b--35">ANSWERED TICKETS</div>
+          <ul class="dashboard-stat-list">
+            <li>
+              TODAY
+              <span class="pull-right"><b>12</b> <small>TICKETS</small></span>
+            </li>
+            <li>
+              YESTERDAY
+              <span class="pull-right"><b>15</b> <small>TICKETS</small></span>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+      <div class="card">
+        <div class="body bg-teal">
+          <div class="font-bold m-b--35">ANSWERED TICKETS</div>
+          <ul class="dashboard-stat-list">
+            <li>
+              TODAY
+              <span class="pull-right"><b>12</b> <small>TICKETS</small></span>
+            </li>
+            <li>
+              YESTERDAY
+              <span class="pull-right"><b>15</b> <small>TICKETS</small></span>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+      <div class="card">
+        <div class="body bg-teal">
+          <div class="font-bold m-b--35">ANSWERED TICKETS</div>
+          <ul class="dashboard-stat-list">
+            <li>
+              TODAY
+              <span class="pull-right"><b>12</b> <small>TICKETS</small></span>
+            </li>
+            <li>
+              YESTERDAY
+              <span class="pull-right"><b>15</b> <small>TICKETS</small></span>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+  </div>
